template spacing issue fixed

--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,5 @@
-@use "vars.scss" as var;
-@use "./colors" as *;
+@use 'vars.scss' as var;
+@use './colors' as *;
 
 *,
 ::before,
@@ -10,9 +10,9 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol';
   font-size: 1rem;
   font-weight: 400;
   line-height: 1;
@@ -30,29 +30,28 @@ body {
   height: 100vh;
   margin: 0;
   padding: 0;
+  display: flex;
+  justify-content: center;
 }
 
 .container {
   height: 100%;
   padding: 0;
-  width: 85%;
-  margin: 0 auto;
+  width: 80%;
   display: flex;
-  justify-content: space-between;
-  justify-content: start;
+  justify-content: center;
 }
 
 /*Side bar section starts*/
 
 .navbar-vertical {
   margin: 2rem 0;
-  margin-left: 3rem;
   display: flex;
   flex-direction: column;
   width: 5%;
   align-items: center;
   height: 100%;
-  position: fixed;
+  position: sticky;
   .toggle-btn {
     #toggle {
       background-color: transparent;
@@ -112,9 +111,9 @@ li {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 85%;
+  width: 80%;
   height: 100%;
-  margin: 0 4rem;
+  // margin: 0 auto;
   .header {
     width: 100%;
   }
@@ -128,7 +127,7 @@ li {
   justify-content: space-between;
   width: 100%;
   position: sticky;
-  margin-left: 5rem;
+  //margin-left: 5rem;
   //background-color: rgba(0, 0, 0, 0.5);
 
   .nav-left {
@@ -144,7 +143,7 @@ li {
         height: 39px;
       }
       .falconText {
-        font-family: "Poppins", sans-serif;
+        font-family: 'Poppins', sans-serif;
         color: $blue;
         font-weight: 800;
         font-size: 1.7rem;
@@ -190,7 +189,7 @@ li {
       padding-left: 5px;
       &::placeholder {
         color: $light-blue;
-        font-family: "Poppins", sans-serif;
+        font-family: 'Poppins', sans-serif;
         font-weight: 300;
         font-size: 1rem;
       }
@@ -244,7 +243,7 @@ li {
         font-weight: 700;
         background-color: $orange;
         border-radius: 100%;
-        font-family: "Poppins", sans-serif;
+        font-family: 'Poppins', sans-serif;
         margin-left: 0.7rem;
         bottom: 8px;
       }
@@ -291,7 +290,7 @@ footer {
   padding-top: 1.5rem;
   span {
     display: flex;
-    font-family: "Open Sans", sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-weight: 300;
     font-size: 15px;
     margin-left: 12.5rem;
@@ -331,7 +330,7 @@ footer {
 
 .hasan-cards {
   width: 100%;
-  margin-left: 6rem;
+  //margin-left: 6rem;
 }
 
 .h-container-1 {
